--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/css/reports.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="/static/css/navbar.css">
-    <link rel="stylesheet" href="/static/js/navbar.js">
+    <script src="/static/js/navbar.js"></script>
     <link rel="stylesheet" href="/static/css/footer.css">
     <link rel="stylesheet" href="/static/css/Prediction.css">
 </head>
