--- a/templates/teacher-insights.html
+++ b/templates/teacher-insights.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/css/Teacher Insights.css">
     <link rel="stylesheet" href="/static/js/subject-analysis.js">
     <link rel="stylesheet" href="/static/css/navbar.css">
-    <link rel="stylesheet" href="/static/js/navbar.js">
+    <script src="/static/js/navbar.js"></script>
     <link rel="stylesheet" href="/static/css/footer.css">
 </head>
 <body class="bg-light">
