--- a/templates/trends.html
+++ b/templates/trends.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="/static/css/navbar.css">
-    <link rel="stylesheet" href="/static/js/navbar.js">
+    <script src="/static/js/navbar.js"></script>
     <link rel="stylesheet" href="/static/css/footer.css">
 </head>
 <body>
